# pasarguard

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README-fa.md  README-ru.md  README-zh-cn.md  README.md  build_dashboard.sh  cli_wrapper.sh  config.py  main.py  pasarguard-tui.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-dev.yml  build.yml  build_dev.yml  github-notifications-bot.yml  ruff-check.yml  test-database-migrations.yml
app/: __init__.py  app_factory.py
app/core/: hosts.py  manager.py  xray.py
app/db/: base.py  models.py
app/db/crud/: admin.py  bulk.py  client_template.py  core.py  general.py  group.py  host.py  hwid.py  node.py  user.py  user_template.py
app/db/migrations/: env.py
app/jobs/: cleanup_subscription_updates.py  node_checker.py  node_stats.py  process_notification_queues.py  record_usages.py  remove_expired_users.py  reset_node_usage.py  reset_user_data_usage.py  review_users.py  send_notifications.py
app/middlewares/: __init__.py  request_logging.py
app/models/: admin.py  client_template.py  core.py  group.py  host.py  node.py  notification_enable.py  proxy.py  settings.py  stats.py  subscription.py  system.py  user.py  user_template.py  validators.py
app/morebot/: manager.py
app/nats/: router.py
app/node/: __init__.py  sync.py  user.py  worker.py
app/notification/: __init__.py  client.py  queue_manager.py
app/notification/discord/: __init__.py  admin.py  messages.py  node.py  user.py
app/notification/telegram/: __init__.py  admin.py  messages.py  node.py  user.py
app/notification/webhook/: __init__.py
app/operation/: __init__.py  admin.py  client_template.py  core.py  group.py  host.py  hwid.py  node.py  subscription.py  system.py  user.py  user_template.py
app/routers/: __init__.py  admin.py  authentication.py  client_template.py  core.py  group.py  home.py  host.py  hwid.py  node.py  subscription.py  system.py  user.py  user_template.py
app/routers/dependencies/: __init__.py  _common.py  admin.py  client_template.py  core.py  group.py  host.py  node.py  subscription.py  user.py  user_template.py
app/settings/: __init__.py
app/subscription/: base.py  clash.py  links.py  outline.py  share.py  singbox.py  xray.py
app/telegram/: __init__.py
app/telegram/keyboards/: user.py
app/telegram/utils/: texts.py
app/templates/: __init__.py
app/templates/clash/: README.md
app/templates/home/: index.html
app/templates/singbox/: README.md
app/templates/subscription/: index.html
app/templates/xray/: README.md
app/utils/: crypto.py  ip_pool.py  jwt.py  logger.py  system.py  wireguard.py
cli/: __init__.py  admin.py  main.py  system.py
dashboard/: README.md  __init__.py  index.html  orval.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.mts
dashboard/src/: App.tsx  entry.client.tsx  index.css  router.tsx  sw-register.ts
dashboard/src/app/: App.tsx  entry.client.tsx  router.tsx
dashboard/src/components/: ActionButtons.tsx  AdminStatistics.tsx  DonationPopup.tsx  Footer.tsx  Language.tsx  LineCountFilter.tsx  PageTransition.tsx  SinceLogsFilter.tsx  Statistics.tsx  StatusBadge.tsx  StatusLogsFilter.tsx  (+18 more)
morebot/: __init__.py  manager.py
tests/: conftest.py  test_record_usages.py
tests/api/: __init__.py  conftest.py  helpers.py  sample_data.py  test_a_admin.py  test_admin.py  test_bulk.py  test_bulk_delete_entities.py  test_client_template.py  test_core.py  test_e_user.py  test_group.py  test_host.py  test_hwid.py  test_ip_detection.py  test_node.py  test_system.py  test_usage_functions_timezone.py  test_user.py  test_user_template.py
tui/: admin.py
(+392 files in other folders)
