[project]
name = "PasarGuard"
version = "4.0.0-rc.1"
description = "Unified GUI Censorship Resistant Solution"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.1",
    "Deprecated==1.2.13",
    "Jinja2>=3.1.6",
    "PyJWT>=2.10.1",
    "PyYAML>=6.0.2",
    "alembic>=1.18.4",
    "bcrypt==5.0.0",
    "click>=8.3.3",
    "commentjson==0.9.0",
    "cryptography==48.0.0",
    "fastapi>=0.136.1",
    "jdatetime>=5.2.0",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.8.2",
    "python-multipart>=0.0.28",
    "qrcode>=8.1",
    "rich>=15.0.0",
    "uvicorn==0.47.0",
    "sse-starlette>=3.4.4",
    "aiohttp>=3.13.5",
    "packaging>=26.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "asyncmy>=0.2.10; sys_platform != 'win32'",
    "aiocache>=0.12.3",
    "textual>=8.2.6",
    "aiogram>=3.28.2",
    "aiohttp-socks>=0.10.1",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "aiorwlock>=1.5.0",
    "typer>=0.25.1",
    "pasarguard-node-bridge>=0.7.1",
    "pip-system-certs>=5.3",
    "nats-py>=2.12.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
respect-gitignore = true
exclude = ["app/db/migrations"]
fix = true

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pymysql>=1.1.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.15.13",
    "sqlalchemy-utils>=0.41.2",
    "textual-dev>=1.8.0",
    "watchfiles>=1.0.4",
]
